@@ -28,10 +28,7 @@
 package ch.boye.httpclientandroidlib.impl;
 
 import java.util.HashMap;
-import java.util.Map;
-
 import ch.boye.httpclientandroidlib.HttpConnectionMetrics;
-import ch.boye.httpclientandroidlib.annotation.NotThreadSafe;
 import ch.boye.httpclientandroidlib.io.HttpTransportMetrics;
 
 /**
@@ -39,7 +36,6 @@ import ch.boye.httpclientandroidlib.io.HttpTransportMetrics;
  *
  * @since 4.0
  */
-@NotThreadSafe
 public class HttpConnectionMetricsImpl implements HttpConnectionMetrics {
 
     public static final String REQUEST_COUNT = "http.request-count";
@@ -55,7 +51,7 @@ public class HttpConnectionMetricsImpl implements HttpConnectionMetrics {
     /**
      * The cache map for all metrics values.
      */
-    private Map<String, Object> metricsCache;
+    private HashMap metricsCache;
 
     public HttpConnectionMetricsImpl(
             final HttpTransportMetrics inTransportMetric,
@@ -106,18 +102,18 @@ public class HttpConnectionMetricsImpl implements HttpConnectionMetrics {
         }
         if (value == null) {
             if (REQUEST_COUNT.equals(metricName)) {
-                value = Long.valueOf(requestCount);
+                value = new Long(requestCount);
             } else if (RESPONSE_COUNT.equals(metricName)) {
-                value = Long.valueOf(responseCount);
+                value = new Long(responseCount);
             } else if (RECEIVED_BYTES_COUNT.equals(metricName)) {
                 if (this.inTransportMetric != null) {
-                    return Long.valueOf(this.inTransportMetric.getBytesTransferred());
+                    return new Long(this.inTransportMetric.getBytesTransferred());
                 } else {
                     return null;
                 }
             } else if (SENT_BYTES_COUNT.equals(metricName)) {
                 if (this.outTransportMetric != null) {
-                    return Long.valueOf(this.outTransportMetric.getBytesTransferred());
+                    return new Long(this.outTransportMetric.getBytesTransferred());
                 } else {
                     return null;
                 }
@@ -126,9 +122,9 @@ public class HttpConnectionMetricsImpl implements HttpConnectionMetrics {
         return value;
     }
 
-    public void setMetric(final String metricName, final Object obj) {
+    public void setMetric(final String metricName, Object obj) {
         if (this.metricsCache == null) {
-            this.metricsCache = new HashMap<String, Object>();
+            this.metricsCache = new HashMap();
         }
         this.metricsCache.put(metricName, obj);
     }
